fixed a bug where the skeleton loader's overflow on dashboard wasn't hidden

--- a/static/css/bootstrap/src/scss/swc_interface/dashboard.scss
+++ b/static/css/bootstrap/src/scss/swc_interface/dashboard.scss
@@ -67,6 +67,7 @@ $dashboard-padding-value: 25px;
             }
 
             .loading{
+                display: inline-block;
                 position: relative;
                 background: #1b1b1b;
                 color: transparent;
